# omw

./: README.md  docker-compose.yml  package.json
apps/mobile/: .gitignore  App.tsx  app.json  package.json  tsconfig.json
apps/mobile/components/: Button.tsx  FormInput.tsx  PhoneInput.tsx  TextInput.tsx
apps/mobile/hooks/auth/: Context.tsx  useAuth.ts
apps/mobile/hooks/drawer/: useDrawer.ts
backend/api-gateway/: Dockerfile  package.json
backend/api-gateway/src/: index.ts
backend/contacts/: Dockerfile  graphql-codegen.yml  package.json  tsconfig.json
backend/contacts/prisma/: schema.prisma
backend/contacts/src/: index.ts
backend/ml/: .dockerignore  .env  Dockerfile  README.md  app.py  explore.ipynb  functions.py
backend/ml-weights/: gmm_0.txt
backend/ml/data/: assault_lat_long.csv
backend/ml/models/: gmm_2.txt
backend/routes/: Dockerfile  Dockerfile_old  nodemon.json  package.json  start.sh
backend/routes/prisma/: schema.prisma
backend/routes/src/: index.ts
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
infra/auth/: createAuthChallengeLambda.ts  defineAuthChallengeLambda.ts  index.ts  postAuthenticationLambda.ts  preSignUpLambda.ts  verifyAuthChallengeResponseLambda.ts
infra/services/: index.ts
ml-backend/: Dockerfile  app.py  explore.ipynb  output_loc.txt  pyproject.toml  res.txt  wsgi.py
ml-backend/data/: assault_lat_long.csv
ml-backend/meta/: gmm.txt
ml-backend/metadata/: gmm.txt
ml-backend/models/: gmm.txt  gmm_0.txt  gmm_1.txt  gmm_2.txt  gmm_3.txt  gmm_4.txt  gmm_5.txt  kmeans.pkl
(+26 files in other folders)
