[tool.poetry]
name = "ml-backend"
version = "0.1.0"
description = ""
authors = ["Aaron Pham <aaronpham0103@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
python-dotenv = "^0.19.0"
pyspark = "^3.1.2"
googlemaps = "^4.5.3"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
gmaps = "^0.9.0"
pandas = "^1.3.3"
numpy = "^1.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
